--- a/src/app/allcards/allcards.component.html
+++ b/src/app/allcards/allcards.component.html
@@ -10,6 +10,8 @@
     <div class="card-body">
         <h5 class="card-title">{{count}}</h5>
         <p class="card-text">My count is</p>
-        <button (click)="countincre()" class="btn btn-primary">Go somewhere</button>
+        <button (click)="countincre()" class="btn btn-primary">+</button>
+        <button (click)="countdecre()" class="btn btn-primary">-</button>
     </div>
 </div>
+
