--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,14 @@
-<div class="me">Hello Guys</div>
-<app-new></app-new>
-<app-allcards></app-allcards>
+<div class="me" [id]="new_id" *ngIf="show">Hello Guys</div>
+ <!-- <app-new></app-new> -->
+<app-allcards></app-allcards> 
+
+<input type="text" placeholder="Write here" [disabled]="disableWrite">
+<button (click)="toggle()">
+    Show/hide
+</button>
+
+<!-- My games are:-
+<ul>
+    <li *ngFor="let g of games">{{g}}</li>
+
+</ul> -->
