--- a/src/app/allcards/allcards.component.html
+++ b/src/app/allcards/allcards.component.html
@@ -2,16 +2,10 @@
     <div class="card-body">
         <h5 class="card-title">{{n}}</h5>
         <p class="card-text">{{desc}}</p>
-        <a href="#" class="btn btn-primary">Go somewhere</a>
+        <a (click)="pr()" class="btn btn-primary">Go somewhere</a>
     </div>
 </div>
 
-<!-- <div class="card" style="width: 18rem;">
-    <div class="card-body">
-        <h5 class="card-title">{{count}}</h5>
-        <p class="card-text">My count is</p>
-        <button (click)="countincre()" class="btn btn-primary">+</button>
-        <button (click)="countdecre()" class="btn btn-primary">-</button>
-    </div>
-</div> -->
+<a (click)="baher()" class="btn btn-primary">Logout</a>
+
 
