--- a/src/app/new/new.component.html
+++ b/src/app/new/new.component.html
@@ -1,1 +1,23 @@
-<p>new works!</p>
+
+<form [formGroup]="studForm" (ngSubmit)="onSubmit()" novalidate>
+ 
+    <p>
+      <label for="firstname">Name </label>
+      <input type="text" id="firstname" name="name" formControlName="name">
+    </p>
+   
+    <p>
+      <label for="lastname">Age</label>
+      <input type="text" id="lastname" name="age" formControlName="age">
+    </p>
+   
+    <p>
+      <label for="email">City </label>
+      <input type="text" id="email" name="city" formControlName="city">
+    </p>
+     
+    <p>
+      <button type="submit">Submit</button>
+    </p>
+   
+  </form>
